--- a/css/style.css
+++ b/css/style.css
@@ -472,6 +472,17 @@ footer img:hover{
 
 
 /* Seccion queries */
+@media screen and (max-width:1100px) {
+    #proyectos .contenedor-proyectos .articulos{
+        flex-direction: column;
+    }
+
+    #proyectos .contenedor-proyectos .articulos .articulo{
+        padding: 10px 0;
+    }
+}
+
+
 @media screen and (max-width:800px) {
     #inicio .contenido .presentacion .bienvenida{
         font-size: 20px;
