--- a/css/style.css
+++ b/css/style.css
@@ -334,11 +334,12 @@ html {
 #contacto #contacto-container {
     background-color: #9959d94b;
     max-width: 1100px;
-    padding: 55px 250px;
+    padding: 50px 50px;
     display: flex;
     flex-direction: row;
     align-content: space-around;
     align-items: center;
+    justify-content: center;
     border-radius: 10px;
     font-weight: bold;
 }
@@ -480,6 +481,7 @@ footer img:hover{
     #proyectos .contenedor-proyectos .articulos .articulo{
         padding: 10px 0;
     }
+
 }
 
 @media screen and (max-width:800px) {
@@ -564,6 +566,13 @@ footer img:hover{
     #contacto #contacto-container {
         flex-wrap: wrap;
     }
+    
+    #contacto #contacto-container #contact-info{
+        margin: 0;
+    }
 
+    #contacto #contacto-container #contact-form{
+        margin: 0;
+    }
     
 }
